[package]
name = "wgpu-problem"
version = "0.1.0"
edition = "2021"

[dependencies]
pollster = "0.3"
# good version:
#wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "f25e07b984ab391628d9568296d5970981d79d8b" }
# bad version (panics):
wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "c0e7c1ef945a7dd61c81fb951ea554213811aee0" }
