[package]
name = "wgpu-problem"
version = "0.1.0"
edition = "2021"

[dependencies]
pollster = "0.3"
# last good
#wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "42e16c7e7de077f8df8827a1cbf262c45565afef" }
# first bad (panics):
#wgpu = { git = "https://github.com/gfx-rs/wgpu", rev = "4a19ac279c4f81aacedb1d215c884c10fe115275" }
# Fix in https://github.com/gfx-rs/wgpu/issues/6011:
wgpu = { git = "https://github.com/sagudev/wgpu", branch = "chk-bind" }
